--- a/test-volumes.yaml
+++ b/test-volumes.yaml
@@ -2,6 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass 
 metadata:
   name: manual 
+  namespace: arjya
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer 
 ---
