--- a/userprofile-deployment.yml
+++ b/userprofile-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: userprofile-deployment
+  namespace: arjya
 spec:
   replicas: 1
   selector:
@@ -17,14 +18,14 @@ spec:
         image: saiteja2502/userprofileretail:latest
         ports:
         - containerPort: 3130  # Change to match your app's port
-        env:
-        - name: MONGODB_URI
-          value: "mongodb://mongodb:27017/myDatabase"  # Match this to your MongoDB deployment
-        - name: SESSION_SECRET
-          value: "1234"
-        - name: EMAIL_USER
-          value: "chagantyteja2502@gmail.com"
-        - name: EMAIL_PASS
-          value: "yxoq bjuk rdnt alzp"
-        - name: PORT
-          value: "3130"    
+        # env:
+        # - name: MONGODB_URI
+        #   value: "mongodb://mongodb:27017/myDatabase"  # Match this to your MongoDB deployment
+        # - name: SESSION_SECRET
+        #   value: "1234"
+        # - name: EMAIL_USER
+        #   value: "chagantyteja2502@gmail.com"
+        # - name: EMAIL_PASS
+        #   value: "yxoq bjuk rdnt alzp"
+        # - name: PORT
+        #   value: "3130"    
